<resources>
    <string name="app_name">SOS:FOMT Guide</string>
    <string name="back_arrow">Go back</string>
    <string name="title_header" />
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>

    <!-- Town Store and Characters -->
    <string name="title_town">Mineral Town</string>

    <string name="title_characters">Characters</string>
    <string name="characters_bachelorettes">Bachelorettes</string>
    <string name="characters_bachelors">Bachelors</string>
    <string name="characters_villagers">Villagers</string>


    <!-- Farm Items -->
    <string name="title_farm">Farm</string>

    <string name="title_crops">Crops</string>
    <string name="fruit_tree">Fruit Trees</string>

    <string name="title_animals">Animals</string>

    <string name="title_buildings">Buildings</string>

    <string name="title_tools">Tools</string>

    <string name="title_sellable_items">Sellable Items</string>

    <!-- Seasons -->
    <string name="season_spring">Spring</string>
    <string name="season_summer">Summer</string>
    <string name="season_fall">Fall</string>
    <string name="season_winter">Winter</string>

    <!-- Miscellaneous -->
    <string name="title_calendar">Calendar</string>
    <string name="title_others">Others</string>
    <string name="map_description">Map of Mineral Town</string>
</resources>