<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment">

    <Button
        android:id="@+id/button_calendar_spring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/season_spring"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_calendar_summer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/season_summer"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_spring" />

    <Button
        android:id="@+id/button_calendar_fall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/season_fall"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_summer"/>

    <Button
        android:id="@+id/button_calendar_winter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/season_winter"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_fall"/>

    <Button
        android:id="@+id/button_calendar_others"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_others"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_winter"/>

</androidx.constraintlayout.widget.ConstraintLayout>