<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/button_town"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_town"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="60dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_calendar"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="40dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_town" />

    <Button
        android:id="@+id/button_characters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_characters"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="40dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar"/>

    <Button
        android:id="@+id/button_farm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_farm"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="40dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_characters"/>

</androidx.constraintlayout.widget.ConstraintLayout>