<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharactersFragment">

    <Button
        android:id="@+id/button_bachelorettes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/characters_bachelorettes"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bachelors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/characters_bachelors"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bachelorettes" />

    <Button
        android:id="@+id/button_villagers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/characters_villagers"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="30dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bachelors"/>

</androidx.constraintlayout.widget.ConstraintLayout>